# fl-anon

./: README.md
quickstart-sklearn/: README.md  pyproject.toml  results.ipynb  run.sh
quickstart-sklearn/results/cb/10/: 0_record_linkage.txt  1_anon.csv  1_record_linkage.txt  2_anon.csv  2_record_linkage.txt  4_anon.csv  4_record_linkage.txt  5_record_linkage.txt  7_anon.csv  7_record_linkage.txt  metrics_accuracy.csv  metrics_loss.csv
quickstart-sklearn/results/cb/20/: 1_anon.csv  1_record_linkage.txt  2_anon.csv  4_anon.csv  6_anon.csv  7_anon.csv  8_anon.csv  9_anon.csv  metrics_accuracy.csv  metrics_loss.csv
quickstart-sklearn/results/cb/3/: 0_record_linkage.txt  1_anon.csv  2_anon.csv  2_orig.csv  2_record_linkage.txt  3_anon.csv  3_record_linkage.txt  4_anon.csv  6_record_linkage.txt  9_anon.csv  metrics_accuracy.csv  metrics_loss.csv
quickstart-sklearn/results/cb/5/: 0_anon.csv  2_anon.csv  2_record_linkage.txt  3_anon.csv  3_record_linkage.txt  4_anon.csv  5_anon.csv  5_record_linkage.txt  6_anon.csv  7_record_linkage.txt  8_record_linkage.txt  9_anon.csv  9_record_linkage.txt  metrics_accuracy.csv  metrics_loss.csv
quickstart-sklearn/results/gfkmc/10/: 0_anon.csv  1_anon.csv  2_anon.csv  3_record_linkage.txt  4_anon.csv  4_orig.csv  4_record_linkage.txt  5_record_linkage.txt  7_record_linkage.txt  8_anon.csv  8_record_linkage.txt  9_anon.csv  metrics_accuracy.csv  metrics_loss.csv
quickstart-sklearn/sklearnexample/: client_app.py  record_linkage.py  server_app.py  task.py
quickstart-sklearn/sklearnexample/anon_methods/: README.md
(+347 files in other folders)
