[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fd-anon"
version = "1.0.0"
description = "Federated Learning with scikit-learn and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.13.1",
    "flwr-datasets[vision]>=0.3.0",
    "scikit-learn>=1.3.0",
    "xgboost",
    "ipython"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "sklearnexample.server_app:app"
clientapp = "sklearnexample.client_app:app"

[tool.flwr.app.config]
penalty = "l2"
num-server-rounds = 100
min-available-clients = 8
anon-method = "original"  # ["original", "gfkmc", "mondrian", "cb", "tdg"]
k = 5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
